# pldm

./: event_manager_test.cpp  meson.build  meson_options.txt
common/: coroutine.hpp  dBusAsyncUtils.hpp  flight_recorder.hpp  globals.hpp  sleep.hpp  types.hpp  utils.cpp  utils.hpp
common/test/: meson.build
configurations/: meson.build
fw-update/: activation.hpp  component_updater.cpp  component_updater.hpp  config.cpp  config.hpp  dbusutil.hpp  device_inventory.cpp  device_inventory.hpp  device_updater.cpp  device_updater.hpp  error_handling.hpp  firmware_inventory.cpp  firmware_inventory.hpp  fw_update_utility.hpp  inventory_manager.cpp  inventory_manager.hpp  manager.hpp  other_device_update_manager.cpp  other_device_update_manager.hpp  package_parser.cpp  package_parser.hpp  package_signature.cpp  package_signature.hpp  update_manager.cpp  update_manager.hpp  watch.cpp  watch.hpp
fw-update/examples/: fw_update_config.json
fw-update/oem-nvidia/: debug_token.cpp  debug_token.hpp
fw-update/test/: activation_test.cpp  component_updater_test.cpp  config_test.cpp  device_inventory_test.cpp  device_updater_firmware_update_test.cpp  device_updater_test.cpp  error_handling_test.cpp  fake_dbusutil.cpp  fake_update_manager.hpp  firmware_inventory_test.cpp  inventory_manager_test.cpp  meson.build  mocked_firmware_update_function.hpp  other_device_update_manager_test.cpp  package_parser_test.cpp  package_signature_test.cpp  test_pkg_v2_incorrectly_signed  test_pkg_v2_signed  test_pkg_v2_signed_corrupted_bytes  test_pkg_v2_signed_truncated  test_pkg_v3_incorrectly_signed  test_pkg_v3_signed  test_pkg_v3_signed_corrupted_bytes  test_pkg_v3_signed_truncated  update_manager_integrity_check_test.cpp  update_manager_pkg_association_test.cpp  update_manager_pkg_must_be_signed_test.cpp  update_manager_test.cpp
fw-update/test/fw_update_jsons/: fw_update_config_combined_properties_match.json  fw_update_config_fw_inv_without_associations.json  fw_update_config_limited_entry.json  fw_update_config_multiple_entry.json  fw_update_config_single_entry.json
host-bmc/: dbus_to_host_effecters.cpp
host-bmc/test/: dbus_to_host_effecter_test.cpp  meson.build
libpldm/: base.c  base.h  entity.h  firmware_update.h  meson.build  platform.c  platform.h  utils.c  utils.h
libpldm/requester/: pldm.c
libpldm/tests/: libpldm_base_test.cpp  libpldm_platform_test.cpp  libpldm_utils_test.cpp  meson.build
libpldmresponder/: base.cpp  bios_config.cpp  fru.cpp  meson.build  platform.cpp  platform.hpp  platform_state_effecter.hpp
mockup-responder/: README.md  meson.build  mockup_responder.cpp  mockup_responder.hpp  pdr_json_parser.cpp  pdr_json_parser.hpp  pldm_mockup_responder.cpp  sensor_to_dbus.cpp  sensor_to_dbus.hpp
mockup-responder/test/: meson.build  mockup_responder_test.cpp  pdr.json
oem/nvidia/configurations/: fw_update_config.json
oem/nvidia/libpldm/: energy_count_numeric_sensor_oem.c  energy_count_numeric_sensor_oem.h  state_set_oem_nvidia.h
oem/nvidia/platform-mc/: memoryPageRetirementCount.hpp  oem_nvidia.cpp  oem_nvidia.hpp  remoteDebug.hpp  state_set_oem.hpp  staticPowerHint.hpp
oem/nvidia/platform-mc/derived_sensor/: switchBandwidthSensor.cpp  switchBandwidthSensor.hpp
oem/nvidia/platform-mc/state_set/: memoryPerformance.hpp  memorySpareChannel.hpp  nvlink.hpp
platform-mc/: entity.hpp  errors.hpp  event_manager.cpp  event_manager.hpp  manager.hpp  numeric_effecter.cpp  numeric_effecter.hpp  numeric_effecter_base_unit.hpp  numeric_effecter_power_cap.hpp  numeric_sensor.cpp  numeric_sensor.hpp  oem_base.hpp  platform_manager.cpp  platform_manager.hpp  pldmServiceReadyInterface.hpp  sensor_manager.cpp  sensor_manager.hpp  smbios_mdr.cpp  smbios_mdr.hpp  state_effecter.cpp  state_effecter.hpp  state_sensor.cpp  state_sensor.hpp  state_set.cpp  state_set.hpp  terminus.cpp  terminus.hpp  terminus_manager.cpp  terminus_manager.hpp
platform-mc/state_set/: clearNonVolatileVariables.hpp  ethernetPortLinkState.hpp  healthState.hpp  pciePortLinkState.hpp  performance.hpp  powerSupplyInput.hpp  presenceState.hpp
platform-mc/test/: event_manager_test.cpp  meson.build  mock_event_manager.hpp  mock_sensor_manager.hpp  mock_terminus_manager.hpp  numeric_effecter_test.cpp  numeric_sensor_test.cpp  sensor_manager_test.cpp  state_effecter_test.cpp  state_sensor_test.cpp  terminus_manager_test.cpp  terminus_test.cpp
pldmd/: handler.hpp  pldmd.cpp  socket_handler.cpp  socket_handler.hpp  socket_manager.hpp
pldmd/service_files/: pldmd.service
pldmd/verbosity/: verbosity
pldmtool/: pldm_base_cmd.cpp  pldm_bios_cmd.cpp  pldm_cmd_helper.cpp  pldm_cmd_helper.hpp  pldm_fru_cmd.cpp  pldm_fw_update_cmd.cpp  pldm_fw_update_cmd.hpp  pldm_platform_cmd.cpp  pldmtool.cpp
requester/: handler.hpp  mctp_endpoint_discovery.cpp  mctp_endpoint_discovery.hpp  request.hpp
requester/test/: handler_test.cpp  mctp_endpoint_discovery_test.cpp  meson.build  mock_mctp_discovery_handler_intf.hpp  mock_request.hpp  request_test.cpp  static_eid_table.json
softoff/: softoff.hpp
tools/fw-update/: README.md  metadata-1.json  metadata-example.json  pldm_fwup_pkg_creator.py
tools/fw-update/glacier_package_examples/: glacier_apfw_sku11.json  glacier_apfw_sku12.json  glacier_apfw_sku7.json  glacier_ecfw_all.json  glacier_ecfw_sku11.json  glacier_ecfw_sku12.json  glacier_ecfw_sku7.json
tools/visualize-pdr/: requirements.txt
utilities/requester/: set_state_effecter.cpp  set_state_effecter_async.cpp
